# wkseguros

./: .gitignore  README.md  pyproject.toml
wkseguros/: alembic.ini  app.db
wkseguros/alembic/: env.py
wkseguros/alembic/versions/: 3216507d2044_initial_migration_tabela_user.py  4a63c3f12ad8_tabela_access_level.py  e52503146940_alter_table_user_add_created_at_column.py
wkseguros/backend/: add_client.py  alembic.ini  dependencies.py  main.py
wkseguros/backend/alembic/: env.py
wkseguros/backend/alembic/versions/: 1bd2efb06d57_create_clients_table.py  467d54c33bd6_initial_migration.py  93c42331cead_tabela_cotation_e_insurance_type.py
wkseguros/backend/api/V1/: __init__.py  client.py
wkseguros/backend/api/V1/auth/: __init__.py  auth.py
wkseguros/backend/core/services/: auth.py  client_service.py
wkseguros/backend/models/: access_level.py  client.py  cotation.py  cotation_status.py  insurance_type.py  user.py
wkseguros/backend/repositories/: client_repository.py  user_repository.py
wkseguros/backend/routes/: auth.py
wkseguros/backend/schemas/: client.py  user.py
wkseguros/backend/services/: auth.py
wkseguros/config/: database.py
wkseguros/frontend/: app.py
wkseguros/frontend/routes/: __init__.py  index_routes.py
wkseguros/frontend/static/css/: admin.css
wkseguros/frontend/static/js/: admin.js
wkseguros/frontend/templates/: base.html
wkseguros/frontend/templates/app/: client.html  home.html  login.html
wkseguros/frontend/templates/site/: home.html  login.html
wkseguros/tests/: conftest.py  test_app.py  test_flask_routes.py
(+1 files in other folders)
